Line up the hypothetical box for positioned frames with the _top_ of the line box if there is nothing in the line before the positioned frame's placeholder. When that happens, it means that the positioned frame's content actually came before whatever content lives in the line box and thus the frame should not be lined up with the line box's bottom.  Bug 94468, r+sr=roc